--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -9,3 +9,14 @@ h1 {
  
 }
 
+
+.container{
+    border: 1px solid;
+    height: 200px;
+    width: 40%;
+    margin: auto;
+    margin-top: 1rem;
+    text-align: center;
+  
+}
+
